# lib_webp

./: CMakeLists.txt  README.md
cmake/: FindExtGIF.cmake  deps_borsch.cmake  util.cmake
examples/: exampleutil.def
imageio/: imagedec.def  imageenc.def  imageio.def
opt/: folders.csv
